# mlcast-dataset-IT-DPC-SRI

./: README.md  zarr_converter.py  zarr_init.py
data/: 2023-01-01-00-00_ROMA_SRI.tif
legacy-formats-conversion/: README.md  decbufr.py  hdf_to_tiff.py
legacy-formats-conversion/bufr/: decbufr.tgz  variables.py
legacy-formats-conversion/hdf/: pyproject.toml
legacy-formats-conversion/tiff/: README.md  dpc-tiff_to_geotiff.py  pyproject.toml
zarr-converter/: pyproject.toml  zarr_converter.py
